tests/derive_ui/enum_variant_not_args.stderr
error[E0277]: the trait bound `SubCmd: clap::Args` is not satisfied
 --> tests/derive_ui/enum_variant_not_args.rs:3:9
  |
3 |     Sub(SubCmd),
  |         ^^^^^^ the trait `clap::Args` is not implemented for `SubCmd`
  |
  = help: the trait `clap::Args` is implemented for `Box<T>`
