tests/derive_ui/enum_variant_not_args.rs
#[derive(clap::Parser)]
enum Opt {
    Sub(SubCmd),
}

#[derive(clap::Parser)]
enum SubCmd {}

fn main() {}
